# sorting-project

./: .gitignore  CMakeLists.txt  LICENSE  README.be.md  README.md
boilerplate/: CMakeLists.txt  boilerplate  main.cpp
csv-generator/: CMakeLists.txt  main.cpp
insertion-sort/: CMakeLists.txt  main.cpp
inverse/: CMakeLists.txt  main.cpp
merge-sort/: CMakeLists.txt  main.cpp
monkey-sort/: CMakeLists.txt  main.cpp
quick-sort/: main.cpp
random/: CMakeLists.txt  main.cpp
scripts/: gen_sources.sh  multiple_runs.sh  sort.sh
selection-sort/: CMakeLists.txt  main.cpp
std-sort/: CMakeLists.txt  main.cpp
swap-sort/: CMakeLists.txt  main.cpp
