cmake_minimum_required(VERSION 3.21)
project(sorting_project)

set(CMAKE_CXX_STANDARD 20)

add_subdirectory(boilerplate)
add_subdirectory(merge-sort)
add_subdirectory(swap-sort)
add_subdirectory(random)
add_subdirectory(insertion-sort)
add_subdirectory(selection-sort)
add_subdirectory(quick-sort)
add_subdirectory(monkey-sort)
add_subdirectory(std-sort)
add_subdirectory(inverse)